--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
       <button id="sendButton">Send</button>
       <div id="messages"></div>
     </div>
+
+    <!-- Control buttons -->
+    <div>
+      <button id="startChatButton">Start Random Chat</button>
+      <button id="skipButton" style="display:none;">Skip to Next Person</button>
+      <button id="endChatButton" style="display:none;">End Chat</button>
+    </div>
   </div>
 </body>
 </html>
